Fix overflow of absolute image

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -9,6 +9,11 @@ html, body {
   margin: 0;
 }
 
+/* Fixes overflow of absolute elements */
+body {
+	overflow-x: hidden;
+}
+
 h1, h2, h3, h4, h5 ,h6 {
 	font-family: "Europa", sans-serif;
 }
